fix button too close to board

--- a/static/game/stylesheet.css
+++ b/static/game/stylesheet.css
@@ -9,7 +9,7 @@ body {
 	top: 0px;
 	outline:1px solid #000;
 	font-size: 0;
-	margin:0px auto;
+	margin:20px auto;
 	height: 650px;
 	width: 650px;
 	padding: 0;
